# Needify

./: .gitignore  README.md  run_local.sh
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  create_fake_tasks.py  docker-compose_dev.yml  docker-compose_prod.yml  docker-compose_services.yml  logging.yml  openapi.json  pyproject.toml  pytest.ini  run_server.sh  setup.cfg
backend/.keystore/: 713A9A9229AAEB7A587A0A0989A562C53DF123D348D95A219337E723F10B5596.blkstate  tonlib.libcache
backend/contracts/: tact_JobOffer.code.boc  tact_JobOffer.pkg
backend/deploy/entrypoints/: run_microservice.sh
backend/deploy/nginx/: nginx.conf
backend/deploy/node_server/: gunicorn.conf
backend/docker/python/: Dockerfile
backend/src/: create_fake_tasks.py  gunicorn.conf.py  main.py  scanner.py
backend/src/apps/TONconnect/: connector.py  dependencies.py  manager.py  router.py  schemas.py  test.py  ts_storage.py
backend/src/apps/category/: dependencies.py  examples.py  exceptions.py  manager.py  routes.py  shema.py
backend/src/apps/currency/: custom_minter.py  dependencies.py  deploy_internal.py  exceptions.py  jetton_metadata.py  manager.py  mint_bodies.py  router.py  schemas.py  utils.py
backend/src/apps/job_offer/: dependencies.py  enums.py  factory.py  job_offer_contract.py  manager.py  router.py  schemas.py  utils.py
backend/src/apps/notificator/: dependencies.py  manager.py  router.py  schemas.py
backend/src/apps/scanner/: cells.py  dependencies.py  manager.py  router.py  service.py
backend/src/apps/tasks/: dependencies.py  enums.py  exceptions.py  manager.py  repository.py  router.py  rules.py  schemas.py
backend/src/apps/tasks/domain/: factory.py  job_offer_contract.py  task.py
backend/src/apps/transaction/: enums.py  schemas.py  service.py
backend/src/apps/users/: database.py  dependencies.py  events.py  manager.py  router.py  schemas.py
backend/src/apps/utils/: database.py  development.py  exceptions.py  wallet.py
backend/src/apps/wallets/: dataclasses.py  dependencies.py  events.py  exceptions.py  jetton_manager.py  manager.py  router.py  schemas.py  utils.py
backend/src/core/: cache.py  config.py  database.py  dependencies.py  enums.py  local_storage.py  logger_settings.py  message_hub.py  middlewares.py  producer.py  provider.py  repository.py  router.py  schemas.py  security.py  utils.py
backend/tests/integration/: conftest.py
backend/tests/integration/datasets/: task.py  users.py
backend/tests/integration/test_job_offer/: test_task.py
backend/tests/integration/test_users/: test_manager.py
contracts/: package-lock.json  package.json
contracts/Needify/: README.md  package-lock.json  package.json  temporary.txt
contracts/Needify/contracts/: job_offer.tact  messages.tact  native_master.tact  token_master.tact  token_wallet.tact
contracts/Needify/scripts/: deployBaseJetton.ts  deployJobOffer.ts  deployMaster.ts  deployNativeMaster.ts  deploySimpleJetton.ts  deployTokenMaster.ts  deployTokenWallet.ts  mintTokens.ts  sentTon.ts
contracts/Needify/tests/: JobOffer.spec.ts
contracts/Needify/utils/: print.ts
contracts/Needify/wrappers/: JobOffer.compile.ts  NativeMaster.ts  NativeWallet.compile.ts  TokenMaster.compile.ts  TokenMaster.ts  TokenWallet.compile.ts
contracts/TheOpenTimes/: package-lock.json  package.json
contracts/TheOpenTimes/contracts/: job_offer.tact  messages.tact  native_master.tact  native_wallet.tact  token_master.tact  token_wallet.tact
contracts/TheOpenTimes/scripts/: deployJobOffer.ts  deployMaster.ts  (+1 more)
frontend/: .env.local.example  openapi.json  package-lock.json  package.json  theme.ts
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx  trackers.ts
frontend/helpers/: index.tsx
frontend/providers/: DateFnsProvider.tsx  TelegramContext.tsx  TonConnectProvider.tsx
frontend/public/: tonconnect-manifest.json
frontend/services/: api.ts  types.ts
frontend/store/: index.ts  types.ts
frontend/tests/: mockData.ts
tbot/: .env.example  Makefile  bot.py  docker-compose_dev.yml  pyproject.toml
tbot/src/core/: config.py  database.py  handlers.py  messages.py
tbot/src/referral/: utils.py
tbot/src/utils/: commands.py
(+40 files in other folders)
