[tool.poetry]
name = "the times bot"
version = "0.1.0"
description = ""
authors = ["Ihor Samartsev <isamarcev1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.3"
redis = "^5.0.4"
aioredis = "^2.0.1"
babel = "^2.14.0"
motor = "^3.4.0"
pydantic-settings = "^2.2.1"
pydantic = "^2.7.1"
aiogram = "^3.5.0"
telegram = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
